datasource db {
  provider = "postgresql"
}

generator client {
  provider        = "prisma-client"
  output          = "../src/generated/prisma"
  previewFeatures = ["views"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Role {
  ADMIN
  USER
}

enum PackageCategory {
  ECONOMIC
  QUALITY
  SPECIAL
}

model User {
  id                                String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt                         DateTime  @default(now())
  updatedAt                         DateTime  @updatedAt
  phone                             String
  password                          String // @db.VarChar(255)
  fullname                          String    @db.VarChar(255)
  balance                           Float     @default(0)
  profitBalance                     Float     @default(0)
  totalProfit                       Float     @default(0)
  parentId                          String?   @db.Uuid
  referParentId                     String?   @db.Uuid
  brandId                           String    @db.Uuid
  freePackageId                     String?   @db.Uuid
  otp                               String?
  otpExpiration                     DateTime?
  role                              Role      @default(USER)
  isDisabled                        Boolean   @default(false)
  isParentDisabled                  Boolean   @default(false)
  isVerified                        Boolean   @default(false)
  maxRechargeDiscountPercent        Float?
  profitPercent                     Float     @default(0)
  initialDiscountPercent            Float?
  appliedDiscountPercent            Float?
  description                       String?
  joinedPromotionId                 String?   @db.Uuid
  joinedPromotionCode               String?   @db.VarChar(255)
  maxGroupDiscount                  Float?
  isOwner                           Boolean   @default(false)
  negativeBalanceNotificationCount  Int       @default(0)
  lastNegativeBalanceNotificationAt DateTime?

  brand           Brand?        @relation(fields: [brandId], references: [id])
  parent          User?         @relation("UserParentRelation", fields: [parentId], references: [id])
  children        User[]        @relation("UserParentRelation")
  referParent     User?         @relation("UserReferRelation", fields: [referParentId], references: [id])
  referChildren   User[]        @relation("UserReferRelation")
  freePackage     Package?      @relation("UserPackageRelation", fields: [freePackageId], references: [id])
  joinedPromotion Promotion?    @relation("UserJoinedPromotionRelation", fields: [joinedPromotionId], references: [id])
  promotion       Promotion[]   @relation("UserPromotionRelation") // A user can create multiple promotions.
  userPackage     UserPackage[]
  payment         Payment[]
  telegram        TelegramUser?
  bankCard        BankCard[]
  file            File[]
  userGift        UserGift[]

  @@unique([phone, brandId], name: "UserPhoneBrandIdUnique")
  @@index([role], name: "UserRoleIndex")
  @@index([parentId], name: "UserParentIdIndex")
  @@index([referParentId], name: "UserReferParentIdIndex")
  @@index([joinedPromotionId], name: "UserJoinedPromotionIndex")
}

model TelegramUser {
  chatId      BigInt?
  id          String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId      String   @unique @db.Uuid
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  phone       String?
  firstname   String?  @db.VarChar(255)
  lastname    String?  @db.VarChar(255)
  username    String?  @db.VarChar(64)
  bigAvatar   String?  @db.VarChar(255)
  smallAvatar String?  @db.VarChar(255)

  user User @relation(fields: [userId], references: [id])

  @@unique([chatId, userId], name: "TelegramChatIdUserIdUnique")
  @@index([userId], name: "TelegramUserUserIdIndex")
}

model BankCard {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  userId    String   @db.Uuid
  number    String
  name      String   @db.VarChar(255)

  user User @relation(fields: [userId], references: [id])

  @@index([userId], name: "BankCardUserIdIndex")
}

model File {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  userId    String   @db.Uuid
  name      String   @db.VarChar(255)

  user User @relation(fields: [userId], references: [id])

  @@index([userId], name: "FileUserIdIndex")
}

enum Country {
  ir
  de
  us
  nl
  tr
  fr
  ca
  sg
  au
  fi
  gb
  es
  it
  se
  ae
  jp
  un
  mx
}

// stats field structure:
// Array of objects with the following structure:
// {
//   timestamp: string (ISO date string)
//   netTraffic: {
//     recv: number (bytes received)
//     sent: number (bytes sent)
//   }
// } 

enum InboundType {
  VLESS_TLS
  VMESS
}

model Server {
  id              String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name            String?           @db.VarChar(255)
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  deletedAt       DateTime?
  country         Country          @default(de)
  domain          String           @db.VarChar(255)
  inboundId       Int              @default(1)
  inboundType     InboundType      @default(VLESS_TLS)
  token           String
  category        PackageCategory?
  tunnelDomain    String           @db.VarChar(255)
  stats           Json?
  port            Int              @default(443)
  ingressServerId String?          @db.Uuid 
  ingressServer   Server?          @relation("TunnelIngress", fields: [ingressServerId], references: [id])
  tunnelChildren  Server[]         @relation("TunnelIngress")

  userPackage  UserPackage[]
  clientStat   ClientStat[]
  ActiveServer ActiveServer[]
}

model Package {
  id             String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  deletedAt      DateTime?
  traffic        Float
  expirationDays Float
  basePrice      Float?
  price          Float
  userCount      Int
  category       PackageCategory @default(QUALITY)
  order          Int?
  forRole        Role[]          @default([ADMIN, USER])
  userPackage    UserPackage[]
  Promotion      Promotion[]
  UserGift       UserGift[]

  User User[] @relation("UserPackageRelation")
}

model RechargePackage {
  id              String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt
  deletedAt       DateTime?
  amount          Float
  discountPercent Float
}

model UserPackage {
  id                     String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt              DateTime  @default(now())
  updatedAt              DateTime  @updatedAt
  deletedAt              DateTime?
  finishedAt             DateTime?
  name                   String    @db.VarChar(255)
  packageId              String    @db.Uuid
  userId                 String    @db.Uuid
  isFree                 Boolean   @default(false)
  serverId               String    @db.Uuid
  statId                 String    @db.Uuid
  thresholdWarningSentAt DateTime?
  orderN                 Int       @default(1)
  bundleGroupSize        Int?
  bundleGroupKey         String?
  durationMonths         Int?

  package  Package    @relation(fields: [packageId], references: [id])
  user     User       @relation(fields: [userId], references: [id])
  server   Server     @relation(fields: [serverId], references: [id])
  stat     ClientStat @relation(fields: [statId], references: [id])
  payments Payment[]

  @@index([userId], name: "UserPackageUserIdIndex")
  @@index([orderN], name: "UserPackageOrderNIndex")
  @@index([serverId], name: "UserPackageServerIdIndex")
  @@index([statId], name: "UserPackageStatIdIndex")
  @@index([packageId], name: "UserPackagePackageIdIndex")
}

model ClientStat {
  id              String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt
  expiryTime      BigInt
  total           BigInt
  down            BigInt
  up              BigInt
  email           String // @db.VarChar(255)
  enable          Boolean
  serverId        String    @db.Uuid
  flow            String    @db.VarChar(255)
  subId           String    @db.VarChar(255)
  tgId            String    @db.VarChar(255)
  limitIp         Int
  lastConnectedAt DateTime?

  server  Server        @relation(fields: [serverId], references: [id])
  Package UserPackage[]

  @@index([serverId], name: "ClientStatServerIdIndex")
  @@index([expiryTime], name: "ClientStatExpiryTimeIndex")
  @@index([total], name: "ClientStatTotalIndex")
  @@index([down], name: "ClientStatDownIndex")
  @@index([up], name: "ClientStatUpIndex")
}

model ActiveServer {
  id             String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  category       PackageCategory
  country        Country         @default(de)
  activeServerId String          @db.Uuid

  server Server @relation(fields: [activeServerId], references: [id])

  @@unique([category, country])
}

enum PaymentState {
  PENDING
  APPLIED
  REJECTED
}

enum PaymentType {
  PACKAGE_PURCHASE
  WALLET_RECHARGE
  IRAN_SERVER_COST
  EXTERNAL_SERVER_COST
}

model Payment {
  id            String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt
  amount        Float
  type          PaymentType
  status        PaymentState @default(PENDING)
  receiptImage  String?      @db.VarChar(255)
  payerId       String       @db.Uuid
  profitAmount  Float        @default(0)
  parentProfit  Float        @default(0) // unusable field, should be deleted
  description   String?
  userPackageId String?      @db.Uuid

  payer       User         @relation(fields: [payerId], references: [id])
  userPackage UserPackage? @relation(fields: [userPackageId], references: [id])

  @@index([payerId], name: "PaymentUserIdIndex")
  @@index([userPackageId], name: "PaymentUserPackageIdIndex")
}

model Promotion {
  id                      String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt               DateTime  @default(now())
  updatedAt               DateTime  @updatedAt
  deletedAt               DateTime?
  code                    String    @unique @db.VarChar(255)
  parentUserId            String    @db.Uuid
  giftPackageId           String?   @db.Uuid
  initialDiscountPercent  Float?
  isForFreePackageSharing Boolean   @default(false)

  parentUser  User     @relation("UserPromotionRelation", fields: [parentUserId], references: [id]) // User who created the promotion
  giftPackage Package? @relation(fields: [giftPackageId], references: [id])
  joinedUsers User[]   @relation("UserJoinedPromotionRelation") // Users who joined using this promotion

  @@index([code], name: "PromotionCodeIndex")
}

model UserGift {
  id            String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  deletedAt     DateTime?
  userId        String    @db.Uuid
  giftPackageId String?   @db.Uuid
  isGiftUsed    Boolean   @default(false)
  promotionId   String?   @db.Uuid

  user        User     @relation(fields: [userId], references: [id])
  giftPackage Package? @relation(fields: [giftPackageId], references: [id])

  @@index([userId], name: "UserGiftUserIdIndex")
  @@index([isGiftUsed], name: "UserGiftIsGiftUsedIndex")
}

model Brand {
  id            String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  deletedAt     DateTime?
  domainName    String    @unique @db.VarChar(255)
  title         String    @db.VarChar(255)
  description   String    @db.VarChar(255)
  botToken      String    @db.VarChar(255)
  botUsername   String    @unique @db.VarChar(255)
  reportGroupId String?   @db.VarChar(255)
  backupGroupId String?   @db.VarChar(255)
  logo          Json?

  User User[]
}

view PersianCalendar {
  date                    DateTime @unique @db.Date
  persian_year            Int
  persian_month           Int
  persian_day             Int
  persian_month_name      String
  persian_season          String
  persian_season_number   Int
  persian_week_start_date DateTime @db.Date

  @@map("persian_calendar") // map the model to your view
}
