//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  phone String [not null]
  password String [not null]
  fullname String [not null]
  balance Float [not null, default: 0]
  profitBalance Float [not null, default: 0]
  totalProfit Float [not null, default: 0]
  parentId String
  referParentId String
  brandId String [not null]
  freePackageId String
  otp String
  otpExpiration DateTime
  role Role [not null, default: 'USER']
  isDisabled Boolean [not null, default: false]
  isParentDisabled Boolean [not null, default: false]
  isVerified Boolean [not null, default: false]
  maxRechargeDiscountPercent Float
  profitPercent Float [not null, default: 0]
  initialDiscountPercent Float
  appliedDiscountPercent Float
  description String
  joinedPromotionId String
  joinedPromotionCode String
  maxGroupDiscount Float
  isOwner Boolean [not null, default: false]
  negativeBalanceNotificationCount Int [not null, default: 0]
  lastNegativeBalanceNotificationAt DateTime
  brand Brand
  parent User
  children User [not null]
  referParent User
  referChildren User [not null]
  freePackage Package
  joinedPromotion Promotion
  promotion Promotion [not null]
  userPackage UserPackage [not null]
  payment Payment [not null]
  telegram TelegramUser
  bankCard BankCard [not null]
  file File [not null]
  userGift UserGift [not null]

  indexes {
    (phone, brandId) [unique]
  }
}

Table TelegramUser {
  chatId BigInt
  id String [pk]
  userId String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  phone String
  firstname String
  lastname String
  username String
  bigAvatar String
  smallAvatar String
  user User [not null]

  indexes {
    (chatId, userId) [unique]
  }
}

Table BankCard {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  number String [not null]
  name String [not null]
  user User [not null]
}

Table File {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  name String [not null]
  user User [not null]
}

Table Server {
  id String [pk]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  country Country [not null, default: 'de']
  domain String [not null]
  inboundId Int [not null, default: 1]
  inboundType InboundType [not null, default: 'VLESS_TLS']
  token String [not null]
  category PackageCategory
  tunnelDomain String [not null]
  stats Json
  port Int [not null, default: 443]
  ingressServerId String
  ingressServer Server
  tunnelChildren Server [not null]
  userPackage UserPackage [not null]
  clientStat ClientStat [not null]
  ActiveServer ActiveServer [not null]
}

Table Package {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  traffic Float [not null]
  expirationDays Float [not null]
  basePrice Float
  price Float [not null]
  userCount Int [not null]
  category PackageCategory [not null, default: 'QUALITY']
  order Int
  forRole Role[] [not null]
  userPackage UserPackage [not null]
  Promotion Promotion [not null]
  UserGift UserGift [not null]
  User User [not null]
}

Table RechargePackage {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  amount Float [not null]
  discountPercent Float [not null]
}

Table UserPackage {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  finishedAt DateTime
  name String [not null]
  packageId String [not null]
  userId String [not null]
  isFree Boolean [not null, default: false]
  serverId String [not null]
  statId String [not null]
  thresholdWarningSentAt DateTime
  orderN Int [not null, default: 1]
  bundleGroupSize Int
  bundleGroupKey String
  durationMonths Int
  package Package [not null]
  user User [not null]
  server Server [not null]
  stat ClientStat [not null]
  payments Payment [not null]
}

Table ClientStat {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  expiryTime BigInt [not null]
  total BigInt [not null]
  down BigInt [not null]
  up BigInt [not null]
  email String [not null]
  enable Boolean [not null]
  serverId String [not null]
  flow String [not null]
  subId String [not null]
  tgId String [not null]
  limitIp Int [not null]
  lastConnectedAt DateTime
  server Server [not null]
  Package UserPackage [not null]
}

Table ActiveServer {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  category PackageCategory [not null]
  country Country [not null, default: 'de']
  activeServerId String [not null]
  server Server [not null]

  indexes {
    (category, country) [unique]
  }
}

Table Payment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  amount Float [not null]
  type PaymentType [not null]
  status PaymentState [not null, default: 'PENDING']
  receiptImage String
  payerId String [not null]
  profitAmount Float [not null, default: 0]
  parentProfit Float [not null, default: 0]
  description String
  userPackageId String
  payer User [not null]
  userPackage UserPackage
}

Table Promotion {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  code String [unique, not null]
  parentUserId String [not null]
  giftPackageId String
  initialDiscountPercent Float
  isForFreePackageSharing Boolean [not null, default: false]
  parentUser User [not null]
  giftPackage Package
  joinedUsers User [not null]
}

Table UserGift {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  userId String [not null]
  giftPackageId String
  isGiftUsed Boolean [not null, default: false]
  promotionId String
  user User [not null]
  giftPackage Package
}

Table Brand {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  domainName String [unique, not null]
  title String [not null]
  description String [not null]
  botToken String [not null]
  botUsername String [unique, not null]
  reportGroupId String
  backupGroupId String
  logo Json
  User User [not null]
}

Table persian_calendar {
  date DateTime [unique, not null]
  persian_year Int [not null]
  persian_month Int [not null]
  persian_day Int [not null]
  persian_month_name String [not null]
  persian_season String [not null]
  persian_season_number Int [not null]
  persian_week_start_date DateTime [not null]
}

Enum Role {
  ADMIN
  USER
}

Enum PackageCategory {
  ECONOMIC
  QUALITY
  SPECIAL
}

Enum Country {
  ir
  de
  us
  nl
  tr
  fr
  ca
  sg
  au
  fi
  gb
  es
  it
  se
  ae
  jp
  un
  mx
}

Enum InboundType {
  VLESS_TLS
  VMESS
}

Enum PaymentState {
  PENDING
  APPLIED
  REJECTED
}

Enum PaymentType {
  PACKAGE_PURCHASE
  WALLET_RECHARGE
  IRAN_SERVER_COST
  EXTERNAL_SERVER_COST
}

Ref: User.brandId > Brand.id

Ref: User.parentId - User.id

Ref: User.referParentId - User.id

Ref: User.freePackageId > Package.id

Ref: User.joinedPromotionId - Promotion.id

Ref: TelegramUser.userId - User.id

Ref: BankCard.userId > User.id

Ref: File.userId > User.id

Ref: Server.ingressServerId - Server.id

Ref: UserPackage.packageId > Package.id

Ref: UserPackage.userId > User.id

Ref: UserPackage.serverId > Server.id

Ref: UserPackage.statId > ClientStat.id

Ref: ClientStat.serverId > Server.id

Ref: ActiveServer.activeServerId > Server.id

Ref: Payment.payerId > User.id

Ref: Payment.userPackageId > UserPackage.id

Ref: Promotion.parentUserId - User.id

Ref: Promotion.giftPackageId > Package.id

Ref: UserGift.userId > User.id

Ref: UserGift.giftPackageId > Package.id